deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: k8s-webhook-handler
  name: k8s-webhook-handler
spec:
  selector:
    matchLabels:
      k8s-app: k8s-webhook-handler
  template:
    metadata:
      labels:
        k8s-app: k8s-webhook-handler
      name: k8s-webhook-handler
    spec:
      serviceAccountName: k8s-webhook-handler
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: k8s-webhook-handler
          image: itskoko/k8s-webhook-handler
          command:
            - /bin/sh
            - -c
            - exec webhook -statsd.address $HOST_IP:8125
          ports:
          - containerPort: 8080
            name: http
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 50Mi
