deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-ci-purger
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    k8s-app: k8s-ci-purger
